<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_icon"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title=""
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/action_exclude_process"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/action_exclude_process"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/action_include_packagename"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/action_include_packagename"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/action_reset"
        android:orderInCategory="103"
        android:showAsAction="never"
        android:title="@string/action_reset"
        tools:ignore="AppCompatResource" />
</menu>