<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/xposed_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end"
        android:padding="10dp"
        android:text=""
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/holo_red_light" />

    <TextView
        android:id="@+id/textView0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/support"
        android:textAppearance="?android:textAppearanceMedium" />

    <TextView
        android:id="@+id/module_active"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end"
        android:padding="10dp"
        android:text=""
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/holo_red_light" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/donate_keycard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end"
                android:text="@string/keycard"
                android:textAppearance="?android:textAppearanceLarge" />

            <TextView
                android:id="@+id/donate_paypal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end"
                android:text="paypal"
                android:textAppearance="?android:textAppearanceLarge" />

            <Button
                android:id="@+id/goto_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/go_to_settings" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>